--- a/app.json
+++ b/app.json
@@ -7,7 +7,7 @@
 
   "env": {
       "SESSION_ID": {
-      "description": "Put the session-id here.",
+      "description": "ANJU-XPRO~yIkkgb5I#Vb1YNNdsI_PUwUbVg_M9k84O_Yvore2pagv4klvJDF0",
       "required": true
     }   
 },
